Added permSize parameter.